changing some css, fixing embeded video and fixing the navbar on smaller screens, buttons now visible

--- a/client/src/components/pages/Home.css
+++ b/client/src/components/pages/Home.css
@@ -49,9 +49,11 @@
 }
 .video-container {
     position: absolute;
+    overflow: hidden;
     top: 0;
     left: 0;
     width: 100%;
+    aspect-ratio: 16/9;
     z-index: 0;
 }
 .color-overlay{
@@ -62,4 +64,10 @@
     width: 100%;
     height: 100vh;
     opacity: 0.5;
+}
+
+.video-container iframe {
+    width: 300%;
+    height: 100%;
+    margin-left: -100%;
 }
